tests/dataset/tpc-ds/compiler/c/q71.error
/tmp/TestCCompiler_TPCDS_Goldenq711566832642/001/prog.c: In function ‘test_TPCDS_Q71_simplified’:
/tmp/TestCCompiler_TPCDS_Goldenq711566832642/001/prog.c:384:20: error: incompatible types when initializing type ‘int’ using type ‘tmp_item_t’
  384 |                    (tmp_item_t){.i_brand_id = 20,
      |                    ^
/tmp/TestCCompiler_TPCDS_Goldenq711566832642/001/prog.c:396:51: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  396 |   if (test_TPCDS_Q71_simplified_result.len != tmp1.len) {
      |                                                   ^
      |                                                   ->
/tmp/TestCCompiler_TPCDS_Goldenq711566832642/001/prog.c:400:60: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  400 |       if (test_TPCDS_Q71_simplified_result.data[i3] != tmp1.data[i3]) {
      |                                                            ^
      |                                                            ->
/tmp/TestCCompiler_TPCDS_Goldenq711566832642/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_TPCDS_Goldenq711566832642/001/prog.c:451:25: warning: implicit declaration of function ‘ws_item_list_t_create’ [-Wimplicit-function-declaration]
  451 |   ws_item_list_t tmp4 = ws_item_list_t_create(web_sales.len * date_dim.len);
      |                         ^~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq711566832642/001/prog.c:451:56: error: ‘(web_sale_t *)&web_sales’ is a pointer; did you mean to use ‘->’?
  451 |   ws_item_list_t tmp4 = ws_item_list_t_create(web_sales.len * date_dim.len);
      |                                                        ^
      |                                                        ->
/tmp/TestCCompiler_TPCDS_Goldenq711566832642/001/prog.c:451:71: error: ‘(date_dim_t *)&date_dim’ is a pointer; did you mean to use ‘->’?
  451 |   ws_item_list_t tmp4 = ws_item_list_t_create(web_sales.len * date_dim.len);
      |                                                                       ^
      |                                                                       ->
/tmp/TestCCompiler_TPCDS_Goldenq711566832642/001/prog.c:470:25: warning: implicit declaration of function ‘cs_item_list_t_create’ [-Wimplicit-function-declaration]
  470 |   cs_item_list_t tmp8 = cs_item_list_t_create(catalog_sales.len * date_dim.len);
      |                         ^~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq711566832642/001/prog.c:470:60: error: ‘(catalog_sale_t *)&catalog_sales’ is a pointer; did you mean to use ‘->’?
  470 |   cs_item_list_t tmp8 = cs_item_list_t_create(catalog_sales.len * date_dim.len);
      |                                                            ^
      |                                                            ->
/tmp/TestCCompiler_TPCDS_Goldenq711566832642/001/prog.c:470:75: error: ‘(date_dim_t *)&date_dim’ is a pointer; did you mean to use ‘->’?
  470 |   cs_item_list_t tmp8 = cs_item_list_t_create(catalog_sales.len * date_dim.len);
      |                                                                           ^
      |                                                                           ->
/tmp/TestCCompiler_TPCDS_Goldenq711566832642/001/prog.c:489:26: warning: implicit declaration of function ‘ss_item_list_t_create’ [-Wimplicit-function-declaration]
  489 |   ss_item_list_t tmp12 = ss_item_list_t_create(store_sales.len * date_dim.len);
      |                          ^~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq711566832642/001/prog.c:489:59: error: ‘(store_sale_t *)&store_sales’ is a pointer; did you mean to use ‘->’?
  489 |   ss_item_list_t tmp12 = ss_item_list_t_create(store_sales.len * date_dim.len);
      |                                                           ^
      |                                                           ->
/tmp/TestCCompiler_TPCDS_Goldenq711566832642/001/prog.c:489:74: error: ‘(date_dim_t *)&date_dim’ is a pointer; did you mean to use ‘->’?
  489 |   ss_item_list_t tmp12 = ss_item_list_t_create(store_sales.len * date_dim.len);
      |                                                                          ^
      |                                                                          ->
/tmp/TestCCompiler_TPCDS_Goldenq711566832642/001/prog.c:508:26: warning: implicit declaration of function ‘concat’ [-Wimplicit-function-declaration]
  508 |   list_int union_sales = concat(tmp4, tmp8, tmp12);
      |                          ^~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq711566832642/001/prog.c:508:26: error: invalid initializer
/tmp/TestCCompiler_TPCDS_Goldenq711566832642/001/prog.c:538:38: error: incompatible types when assigning to type ‘list_int’ from type ‘result_item_list_t’
  538 |   test_TPCDS_Q71_simplified_result = result;
      |                                      ^~~~~~
